# starter

./: .pre-commit-config.yaml  Makefile  README.md  cookiecutter.json  pyproject.toml  rename.py
.github/workflows/: actions.yml
notebooks/: main.ipynb
tests/: test_alpha.py
{{cookiecutter.project_slug}}/: README.md  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: actions.yml
{{cookiecutter.project_slug}}/notebooks/: main.ipynb
{{cookiecutter.project_slug}}/tests/: test_alpha.py
