[tool.poetry]
name = "{{cookiecutter.project_slug}}"
version = "0.0.0"
description = ""
authors = ["{{cookiecutter.full_name}} <{{cookiecutter.email}}>"]
readme = "README.md"
packages = [
	{ include = "{{cookiecutter.project_slug}}", from = "." }
]

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.5.1"
pandas = "^2.2.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
loguru = "^0.7.2"
toml = "^0.10.2"
cookiecutter = "^2.6.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.1"


[tool.poetry.group.lint.dependencies]
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
